--- a/404.html
+++ b/404.html
@@ -1,6 +1,71 @@
-<link rel="stylesheet" href="404.css">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 
-<span class="multiple-text"></span>
+    <meta http-equiv="refresh" content="0; url=https://mateag.com/404">
 
-<script src="assets/js/javascript.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    <title>(404) MateAG - Web Oficial</title>
+    <meta name="title" content="MateAG - Web Oficial" />
+    <meta name="description" content="MateAG es un creador de contenido, desarrollador, programador, gamer, entre muchos. Contiene +2.000 seguidores sumando todas sus cifras de sus redes sociales oficiales..." />
+    <meta name="theme-color" content="#12a858">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="mateag.com" />
+    <meta property="og:title" content="MateAG - Web Oficial" />
+    <meta property="og:description" content="MateAG es un creador de contenido, desarrollador, programador, gamer, entre muchos. Contiene +2.000 seguidores     sumando todas sus cifras de sus redes sociales oficiales..." />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="mateag.com" />
+    <meta property="twitter:title" content="MateAG - Web Oficial" />
+    <meta property="twitter:description" content="MateAG es un creador de contenido, desarrollador, programador, gamer, entre muchos. Contiene +2.000 seguidores sumando todas sus cifras de sus redes sociales oficiales..." />
+    
+    <meta name="keywords" content="mateag, mate">
+    
+    <link rel="icon" href="/assets/img/mate.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="icon" href="assets/img/mate.png">
+    <link rel="stylesheet" href="404.css">
+
+    <meta name="theme-color" content="#CC240A">
+</head>
+<body>
+    <header class="header">
+        <a href="https://mateag.com" class="logo">MateAG</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav class="navbar">
+            <a href="https://mateag.com/home/#home" class="active">Inicio</a>
+            <a href="https://mateag.com/home/#about">Sobre mi</a>
+            <a href="https://mateag.com/home/#services">Servicios</a>
+            <a href="https://mateag.com/home/#contact">Contacto</a>
+        </nav>
+    </header>
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3><span class="multiple-text"></span></h3>
+            <div class="console-container">
+                <p style="font-size: 1.6rem; font-family: Consolas;">Microsoft(R) Windows 95<br>(C)Copyright Microsoft Corp 1981 - 1996<br><br></p>
+                <p style="font-size: 1.6rem; font-family: Consolas;">C:\WINDOWS> C:\<br>C:\> cd USERS<br>C:\USERS> cd MateAG<br>C:\USERS\MateAG> cd Desktop<br>C:\USERS\MateAG\Desktop> cd MateAG_Web<br>C:\USERS\MateAG\Desktop\MateAG_web> TYPE 404.html</p><p id="typed-desc"></p>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-text">
+            <p>© Copyright 2026 - MateAG. Todos los derechos reservados. Toda copia a esta web será denunciada legalmente. <3</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="404.js"></script>
+</body>
+</html>
