--- a/home/index.html
+++ b/home/index.html
@@ -19,7 +19,9 @@
     <meta property="twitter:url" content="mateag.com" />
     <meta property="twitter:title" content="MateAG - Web Oficial" />
     <meta property="twitter:description" content="MateAG es un creador de contenido, desarrollador, programador, gamer, entre muchos. Contiene +2.000 seguidores sumando todas sus cifras de sus redes sociales oficiales..." />
-
+    
+    <meta name="keywords" content="mateag, mate">
+    
     <link rel="icon" href="./assets/img/mate.png">
 </head>
 
