Mmm, tal vez así?

--- a/404.html
+++ b/404.html
@@ -29,152 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="assets/img/mate.png">
-    <link rel="stylesheet" href="./404.css">
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    border: none;
-    outline: none;
-    scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
-}
-
-:root {
-    --bg-dark: #0a0a0a;
-    --bg-dark-red: #051a13;
-    --bg-red: #0a2d18;
-    --text-color: #ffffff;
-    --main-color: #00ff44;
-    --second-bg-color: #323946;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    font-size: .9em;
-    background: radial-gradient(ellipse at center, var(--bg-red) 0%, var(--bg-dark-red) 40%, var(--bg-dark) 100%) !important;
-    height: 100%;
-    position: relative;
-    overflow-x: hidden;
-    color: var(--text-color);
-}
-
-html {
-    font-size: 62.5%;
-    overflow-x: hidden;
-}
-
-section {
-    min-height: 100vh;
-    padding: 10rem 9% 2rem;
-}
-
-.header {
-    position: fixed;
-    top: 0; left: 0; width: 100%;
-    padding: 2rem 9%;
-    background: rgba(2, 77, 36, 0.1);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.logo {
-    font-size: 2.5rem;
-    color: var(--text-color);
-    font-weight: 600;
-}
-
-.navbar a {
-    font-size: 1.7rem;
-    color: var(--text-color);
-    margin-left: 4rem;
-    transition: .3s;
-}
-
-.navbar a:hover, .navbar a.active {
-    color: var(--main-color);
-}
-
-#menu-icon {
-    font-size: 3.6rem;
-    color: var(--text-color);
-    display: none;
-}
-
-.home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.home-content h3 {
-    font-size: 3.2rem;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
-.console-container {
-    background: rgba(0, 0, 0, 0.85);
-    padding: 25px;
-    border-radius: 4px;
-    box-shadow: 0 0 20px rgba(0, 255, 68, 0.1);
-    width: 100%;
-    max-width: 800px;
-}
-
-#typed-desc {
-    font-size: 1.6rem;
-    color: var(--main-color);
-    font-family: 'Consolas', 'Courier New', monospace;
-    line-height: 1.6;
-    white-space: pre-wrap;
-    text-align: left;
-}
-
-.typed-cursor {
-    font-size: 1.8rem;
-    color: var(--main-color);
-}
-
-.ms-dos-cursor::after {
-    content: '█';
-    animation: blink 0.8s infinite;
-    margin-left: 2px;
-}
-
-@keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0; }
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 9%;
-    background: var(--second-bg-color);
-}
-
-@media (max-width: 768px) {
-    #menu-icon { display: block; }
-    .navbar {
-        position: absolute;
-        top: 100%; left: 0; width: 100%;
-        background: var(--bg-dark);
-        display: none;
-    }
-    .navbar.active { display: block; }
-}
-    </style>
+    <link rel="stylesheet" href="/404.css">
 
     <meta name="theme-color" content="#CC240A">
 </head>
@@ -208,6 +63,6 @@ section {
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="./404.js"></script>
+    <script src="/404.js"></script>
 </body>
 </html>
