--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="assets/img/mate.png">
-    <link rel="stylesheet" href="/404.css">
+    <link rel="stylesheet" href="/styles_404.css">
 
     <meta name="theme-color" content="#CC240A">
 </head>
@@ -63,6 +63,6 @@
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="/404.js"></script>
+    <script src="/404_js.js"></script>
 </body>
 </html>
