Tal vez con la versión?..

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="https://mateag.com/home/assets/img/mate.png">
-    <link rel="stylesheet" href="https://mateag.com/assets/css/styles_404.css">
+    <link rel="stylesheet" href="/assets/css/styles_404.css?v=1.1">
 
     <meta name="theme-color" content="#CC240A">
 </head>
