--- a/home/index.html
+++ b/home/index.html
@@ -26,16 +26,21 @@
 </head>
 
 <body>
+    <!-- Parte del Mouse xD -->
+    <div class="cursor-outline"></div>
+    <div class="cursor-dot"></div>
+    
+    <!-- Web en sí -->
     <header class="header">
         <a href="https://mateag.com" class="logo">MateAG</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="#home" class="active">Inicio</a>
-            <a href="#about">Sobre mi</a>
-            <a href="#services">Servicios</a>
-            <a href="#contact">Contacto</a>
+            <a href="https://mateag.com/home" class="active">Inicio</a>
+            <a href="https://mateag.com/proximamente">Proximamente</a>
+            <a href="https://mateag.com/proximamente">Proximamente</a>
+            <a href="https://mateag.com/proximamente">Proximamente</a>
         </nav>
     </header>
 
@@ -54,6 +59,7 @@
                         <a href="https://steamcommunity.com/id/MateAG" target="_blank"><i class='bx bxl-steam'></i></a>
                         <a href="https://x.com/MateAG_" target="_blank"><i class='bx bxl-twitter'></i></a>
                         <a href="https://twitch.tv/mateag_" target="_blank"><i class='bx bxl-twitch'></i></a>
+                        <a href="https://web.theshadowsmc.xyz" target="_blank"><i class='bx bxs-server'></i></a>
             </div>
             <a href="#about" class="btn">¡Aprende sobre mí!</a>
         </div>
@@ -81,44 +87,152 @@
         </div>
     </section>
 
-    <section class="services" id="services">
-        <h2 class="heading">Mi <span>experiencia</span> (¡+6 años!)</h2>
+<section class="services" id="services">
+    <h2 class="heading">Mi <span>experiencia</span> (¡+6 años!)</h2>
 
-        <div class="services-container">
-            <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Desarrollo web</h3>
-                <p>Tengo nivel avanzado en la programación web con HTML, CSS y nivel básica con JS, el cual aprenderé cuando acabe el curso de HTML y CSS que estoy haciendo. ¡Pronto esta web será profesional!</p>
-                <text style="font-size: 10px; padding-bottom: 5px">- Desde <span>5€</span> (necesito una plantilla o base).</text>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-discord-alt'></i>
-                <h3>Desarrollo en Discord</h3>
-                <p>Me especializo en crear servidores, bots y muchas cosas más de Discord. Soy nivel profesional en este ámbito. Programo mis bots con NodeJS, con funciones avanzadas. </p>
-                <text style="font-size: 10px; padding-bottom: 5px">- Servidores: Desde <span>6€</span> (necesito una plantilla).</text><br>
-                <text style="font-size: 10px; padding-bottom: 5px">- Bots: Desde <span>15€</span> (necesito comandos y funciones).</text><br>
-                <text style="font-size: 10px; padding-bottom: 5px">- Otros: Desde <span>0€</span> (varía según el contenido).</text>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxs-server'></i>
-                <h3>Desarrollo de Servidores</h3>
-                <p>Soy configurador, programador y staff especializado en comunidades y servidores de Minecraft tanto para Java, como para Bedrock. Como dije anteriormente, tengo un servidor, el cual puedes visitar en <a href="https://web.theshadowsmc.xyz" target="_blank" style="color: #807b7b; text-decoration: underline;">este enlace</a>. Programo mis propios plugins, mientras que otras veces configuro algunos públicos.</p>
-                <text style="font-size: 10px; padding-bottom: 5px">- Desde <span>20€</span> (necesito funciones).</text>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxs-hdd'></i>
-                <h3>Programación</h3>
-                <p>Tengo gran experiencia en programación de scripts de Visual Basic y Batch. Programo varios tipos de cosas cuando me aburro, como virus, ramsomwares, algunos spywares (obviamente no para nada malo). Pronto me prepararé para aprender Python, C/++, entre otros.</p>
-                <text style="font-size: 10px; padding-bottom: 5px">- Desde <span>10€</span> (necesito funciones).</text>
-            </div>
-
-            <h2 style="font-size: 2.5rem; padding-top: 20px">Puedes contratar estos servicios contactandome aquí:</h2>
+    <div class="services-container">
+        <div class="services-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Desarrollo web</h3>
+            <p>Tengo nivel avanzado en la programación web con HTML, CSS y nivel básico con JS. ¡Pronto esta web será profesional!</p>
+            <div class="price-tag">Desde <span>5€</span> (plantilla o base)</div>
         </div>
-        <a href="#contacto" class="btn" style="align-self: center;">¡Contratar!</a>
-    </section>
+
+        <div class="services-box">
+            <i class='bx bxl-discord-alt'></i>
+            <h3>Desarrollo en Discord</h3>
+            <p>Especialista en servidores y bots con NodeJS. Programación de funciones avanzadas y gestión de comunidades.</p>
+            <div class="price-tag">Servidores: <span>6€</span></div>
+            <div class="price-tag">Bots: <span>15€</span></div>
+        </div>
+
+        <div class="services-box">
+            <i class='bx bxs-server'></i>
+            <h3>Servidores Minecraft</h3>
+            <p>Configurador y programador especializado en Java y Bedrock. Experiencia propia con TheShadows Network.</p>
+            <div class="price-tag">Desde <span>20€</span> (según funciones)</div>
+        </div>
+
+        <div class="services-box">
+            <i class='bx bxs-hdd'></i>
+            <h3>Programación</h3>
+            <p>Experiencia avanzada en Scripts de Visual Basic y Batch. Próximamente expandiendo a Python y C++.</p>
+            <div class="price-tag">Desde <span>10€</span> (proyectos a medida)</div>
+        </div>
+    </div>
+
+    <div style="text-align: center; width: 100%; margin-top: 5rem;">
+        <h2 style="font-size: 2.5rem; margin-bottom: 2rem;">¿Quieres contratar estos servicios?</h2>
+        <a href="#contacto" class="btn">¡Contratar ahora!</a>
+    </div>
+</section>
+
+    <section class="about" id="experiencia">
+
+        <h2 class="heading">Mi <span>progreso</span> (¡mejorando!)</h2>
+
+        <div class="skills-container">
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>HTML</span>
+            <span>65%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 65%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>CSS</span>
+            <span>50%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 50%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>NodeJS</span>
+            <span>65%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 65%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>Servidores</span>
+            <span>90%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 90%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>JS</span>
+            <span>15%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 15%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>Batch</span>
+            <span>80%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 80%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>Visual Studio Basic</span>
+            <span>70%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 70%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>Python</span>
+            <span>1%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 1%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>C/++</span>
+            <span>0%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 0%;"></span>
+        </div>
+    </div>
+
+    <div class="skill-bar-box">
+        <div class="skill-info">
+            <span>C/##</span>
+            <span>0%</span>
+        </div>
+        <div class="progress-line">
+            <span style="width: 0%;"></span>
+        </div>
+    </div>
+</div>
+</section>
 
     <section class="contact" id="contacto" style="margin-top: 120px;">
         <h2 class="heading">Contacta <span>conmigo</span></h2>
@@ -133,7 +247,6 @@
         <br><h3 style="font-size: 30px;">¡Más categorías pronto!</h3>
 
     </section>
-
     
     <footer class="footer">
         <div class="footer-text">
@@ -146,8 +259,8 @@
     </footer>
 
 
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="assets/js/scrollreveal.js"></script>
+    <script src="assets/js/typed.js"></script>
     <script src="assets/js/javascript.js"></script>
 </body>
 </html>
