--- a/proximamente/index.html
+++ b/proximamente/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
-    <title>(404) MateAG - Web Oficial</title>
+    <title>(503) MateAG - Web Oficial</title>
     <meta name="title" content="MateAG - Web Oficial" />
     <meta name="description" content="MateAG es un creador de contenido, desarrollador, programador, gamer, entre muchos. Contiene +2.000 seguidores sumando todas sus cifras de sus redes sociales oficiales..." />
     <meta name="theme-color" content="#12a858">
@@ -29,9 +29,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="https://mateag.com/home/assets/img/mate.png">
-    <link rel="stylesheet" href="/assets/css/styles_404.css?v=1.1">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
     <meta name="theme-color" content="#CC240A">
+    <meta name="robots" content="noindex">
 </head>
 <body>
     <header class="header">
@@ -49,7 +50,7 @@
             <h3><span class="multiple-text"></span></h3>
             <div class="console-container">
                 <p style="font-size: 1.6rem; font-family: Consolas;">Microsoft(R) Windows 95<br>(C)Copyright Microsoft Corp 1981 - 1996<br><br></p>
-                <p style="font-size: 1.6rem; font-family: Consolas;">C:\WINDOWS> C:\<br>C:\> cd USERS<br>C:\USERS> cd MateAG<br>C:\USERS\MateAG> cd Desktop<br>C:\USERS\MateAG\Desktop> cd MateAG_Web<br>C:\USERS\MateAG\Desktop\MateAG_web> TYPE 404.html</p><p id="typed-desc"></p>
+                <p style="font-size: 1.6rem; font-family: Consolas;">C:\WINDOWS> C:\<br>C:\> cd USERS<br>C:\USERS> cd MateAG<br>C:\USERS\MateAG> cd Desktop<br>C:\USERS\MateAG\Desktop> cd MateAG_Web<br>C:\USERS\MateAG\Desktop\MateAG_web> TYPE ???.html<br><br>Wait...<br></p><p id="typed-desc"></p>
             </div>
         </div>
     </section>
@@ -63,6 +64,6 @@
     </footer>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="/assets/js/404_js.js"></script>
+    <script src="assets/js/javascript.js"></script>
 </body>
 </html>
