--- a/proximamente/index.html
+++ b/proximamente/index.html
@@ -39,8 +39,8 @@
         <a href="https://mateag.com" class="logo">MateAG</a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
-            <a href="https://mateag.com/home" class="active">Inicio</a>
-            <a href="https://mateag.com/proximamente">Proximamente</a>
+            <a href="https://mateag.com/home">Inicio</a>
+            <a href="https://mateag.com/proximamente" class="active">Proximamente</a>
             <a href="https://mateag.com/proximamente">Proximamente</a>
             <a href="https://mateag.com/proximamente">Proximamente</a>
         </nav>
