--- a/404.html
+++ b/404.html
@@ -38,9 +38,9 @@
         <a href="https://mateag.com" class="logo">MateAG</a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
-            <a href="https://mateag.com/home" class="active">Inicio</a>
+            <a href="https://mateag.com/home">Inicio</a>
             <a href="https://mateag.com/proximamente">Proximamente</a>
-            <a href="https://mateag.com/proximamente">Proximamente</a>
+            <a href="https://mateag.com/proximamente" class="active">No encontrado</a>
             <a href="https://mateag.com/proximamente">Proximamente</a>
         </nav>
     </header>
